--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <p>To contact croissant.com, please emails us at 
     <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
 </p>
-<div class="contact">
+<div class="container">
 <a href="/index.html" class="text-decoration-none">Homepage</a>
 <a href="/photo.html" class="text-decoration-none">Photo</a>
 </div>
