--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 </p>
 <div class="container">
 <a href="/index.html" class="text-decoration-none">Homepage</a>
-<a href="/photo.html" class="text-decoration-none">Photo</a>
+<a href="/photo.html" class="text-decoration-none">Crossaint</a>
 </div>
 </body>
 </html>
