--- a/photo.html
+++ b/photo.html
@@ -14,7 +14,7 @@
 </br>
 <div class="container">
     <a href="/index.html" class="text-decoration-none">Homepage</a>
-    <a href="/contact.html" class="text-decoration-none">Contact</a>
+    <a href="/contact.html" class="text-decoration-none">Contact me</a>
 </div>
 </body>
 </html>
