--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="The Best Croissant in Lisbon tells you all aout the best places do in Croissants in Town.">
+    <title>Best Croissant in Lisbon</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="/src/styles.css">
 </head>
@@ -13,8 +13,8 @@
    <p>A Croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for its historical crescent shape. Croissants and other viennoiserie are made of a layered yeast-leavened dough</p>
    <div class="container">
    <a href="/index.html" class="text-decoration-none">Homepage</a>
-   <a href="/photo.html" class="text-decoration-none">Photo</a>
-   <a href="/contact.html" class="text-decoration-none">Contact</a>
+   <a href="/photo.html" class="text-decoration-none">Crossaint</a>
+   <a href="/contact.html" class="text-decoration-none">Contact me</a>
    </div>
 </body>
 </html>
